make sure doc decorations is behind doc button bar flyouts

--- a/src/client/views/DocumentDecorations.scss
+++ b/src/client/views/DocumentDecorations.scss
@@ -188,7 +188,7 @@ $linkGap : 3px;
     height: auto;
     display: flex;
     flex-direction: row;
-    z-index: 5;
+    z-index: 998;
     position: absolute;
 }
 
